@@ -1,3 +1,9 @@
+2008-10-14  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c
+	(bacon_video_widget_get_best_image): Revert last patch,
+	we were already checking for GST_TAG_PREVIEW_IMAGE
+
 2008-10-13  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c
